@@ -36,7 +36,7 @@ DEFAULT_CQLSH_TERM = 'xterm'
 try:
     Pattern = re._pattern_type
 except AttributeError:
-    # Python 3.8-3.11
+    # Python 3.6+
     Pattern = re.Pattern
 
 
